tests/should_fail/illegal_table_key.luma
-- Illegal table key: number without brackets
let t = {
  123 = "value"
}
